--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
         <div class="p-6 bg-gray-800 rounded-lg hover-scale">
           <span class="text-6xl mb-4">👩🏼‍⚕️</span>
           <h3 class="text-2xl font-bold">Maia</h3>
-          <p class="mt-2">Asistente médica inteligente para detectar patologías.</p>
+          <p class="mt-2">Assistant médica inteligente para detectar patologías.</p>
           <a href="https://maia-vaovao.streamlit.app/" class="mt-4 inline-block px-6 py-3 bg-blue-500 text-white rounded-lg hover:bg-blue-600">Ver app</a>
         </div>
         <!-- Proyecto Axo -->
         <div class="p-6 bg-gray-800 rounded-lg hover-scale">
           <span class="text-6xl mb-4">🤖</span>
           <h3 class="text-2xl font-bold">Axo</h3>
-          <p class="mt-2">Asistente de entrenamiento físico y deportivo.</p>
+          <p class="mt-2">Assistant de entrenamiento físico y deportivo.</p>
           <a href="https://axo-ai.streamlit.app/" class="mt-4 inline-block px-6 py-3 bg-blue-500 text-white rounded-lg hover:bg-blue-600">Ver app</a>
         </div>
         <!-- Proyecto Argo -->
