--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="flex items-center">
         <!-- Logo con emoji -->
         <span class="text-4xl mr-4">👾</span>
-        <h1 class="text-2xl font-bold">Damián Gonzalo Díaz | Desarrollador Backend Jr</h1>
+        <h1 class="text-2xl font-bold">Damián Gonzalo Díaz </h1>
       </div>
       <nav>
         <a href="#projects" class="mx-2 hover:text-blue-400">Proyectos</a>
